--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "axios": "^1.10.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.5.2",
