--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-google-recaptcha": "^3.1.0"
+    "react-google-recaptcha": "^3.1.0",
+    "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.5.2",
