--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,7 @@
 RECAPTCHA_SECRET=6Lec9YcrAAAAAAhLTvt4q1cJbjhFdOkYyCsG7OCU
+PORT=5000
+
+DB_HOST=mysql-terravision.alwaysdata.net
+DB_USER=410495
+DB_PASS=Jorger0:v
+DB_NAME=terravision_formularioprueba
