--- a/backend/package.json
+++ b/backend/package.json
@@ -20,5 +20,8 @@
     "mysql2": "^3.14.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
