Back actualizado con CORS

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-RECAPTCHA_SECRET=6Lec9YcrAAAAAAhLTvt4q1cJbjhFdOkYyCsG7OCU
+RECAPTCHA_SECRET=6Lcln2wrAAAAAD80dGTQj156nnuX1GZUwW_qsCPv
+# 6Lec9YcrAAAAAAhLTvt4q1cJbjhFdOkYyCsG7OCU
 
 DB_HOST=mysql-terravision.alwaysdata.net
 DB_USER=410495
