--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,24 +1,37 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name suarez.efdiaz.xyz;
 
     root /usr/share/nginx/html;
     index index.html;
 
+    # Frontend React (SPA)
     location / {
         try_files $uri $uri/ /index.html;
     }
 
+    # Proxy para backend API
     location /api/ {
-    proxy_pass http://backend:5000/;
-    rewrite ^/api/(.*)$ /$1 break;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
-    proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade;
-}
+        proxy_pass http://backend:5000/api/;  
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
 
+        # Headers para CORS preflight
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept';
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Length' 0;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            return 204;
+        }
+
+        add_header 'Access-Control-Allow-Origin' '*';
+    }
 
     error_page 404 /index.html;
 }
