--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,13 @@ services:
     container_name: nginx-suarez
     ports:
       - "80:80"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - "443:443"
     depends_on:
       - frontend
       - backend
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     networks:
       - webnet
 
