--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,25 +1,32 @@
+# Redirección HTTP a HTTPS
 server {
     listen 80;
     server_name suarez.efdiaz.xyz;
+    return 301 https://$host$request_uri;
+}
 
-    root /usr/share/nginx/html;
-    index index.html;
+# HTTPS con Let's Encrypt
+server {
+    listen 443 ssl;
+    server_name suarez.efdiaz.xyz;
 
-    # Frontend React (SPA)
+    ssl_certificate /etc/letsencrypt/live/suarez.efdiaz.xyz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/suarez.efdiaz.xyz/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
     location / {
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://frontend:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 
-    # Proxy para backend API
     location /api/ {
-        proxy_pass http://backend:5000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        proxy_pass http://backend:5000;
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
 
-        # Headers para CORS preflight
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
@@ -32,6 +39,4 @@ server {
 
         add_header 'Access-Control-Allow-Origin' '*';
     }
-
-    error_page 404 /index.html;
 }
