Cambios de ngnix

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,42 +1,53 @@
-# Redirección HTTP a HTTPS
+# Redireccionar todo HTTP a HTTPS
 server {
     listen 80;
-    server_name suarez.efdiaz.xyz;
+    server_name suarez.efdiaz.xyz otro.efdiaz.xyz;
+
     return 301 https://$host$request_uri;
 }
 
-# HTTPS con Let's Encrypt
+# Proxy para suarez.efdiaz.xyz
 server {
-    listen 443 ssl;
+    listen 443 ssl http2;
     server_name suarez.efdiaz.xyz;
 
     ssl_certificate /etc/letsencrypt/live/suarez.efdiaz.xyz/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suarez.efdiaz.xyz/privkey.pem;
 
+    # Opciones SSL recomendadas
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
 
     location / {
-        proxy_pass http://frontend:80;
+        proxy_pass http://suarez_frontend:80;  # nombre del contenedor o ip interna
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /api/ {
-        proxy_pass http://backend:5000;
+        proxy_pass http://suarez_backend:5000;  # backend
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
 
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept';
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Length' 0;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
-            return 204;
-        }
+# Proxy para otro.efdiaz.xyz (ejemplo)
+server {
+    listen 443 ssl http2;
+    server_name otro.efdiaz.xyz;
 
-        add_header 'Access-Control-Allow-Origin' '*';
+    ssl_certificate /etc/letsencrypt/live/otro.efdiaz.xyz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/otro.efdiaz.xyz/privkey.pem;
+
+    location / {
+        proxy_pass http://otro_proyecto:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
