--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,27 @@
-version: "3.8"
+networks:
+  webnet:
+    driver: bridge
 
 services:
-  backend:
+  suarez_frontend:
+    build: ./frontend
+    networks:
+      - webnet
+
+  suarez_backend:
     build: ./backend
-    ports:
-      - "5000:5000"
-    environment:
-      - NODE_ENV=production
     networks:
       - webnet
 
-  frontend:
-    build: .
-    ports:
-      - "2239:80"
-    depends_on:
-      - backend
-    networks:
-      - webnet
-
+  services:
   nginx:
     image: nginx:alpine
-    container_name: nginx-suarez
     ports:
       - "80:80"
       - "443:443"
-    depends_on:
-      - frontend
-      - backend
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro 
     networks:
       - webnet
 
-networks:
-  webnet:
