--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,14 +1,13 @@
 # Redireccionar todo HTTP a HTTPS
 server {
-    listen 80;
+    listen 8080;
     server_name suarez.efdiaz.xyz otro.efdiaz.xyz;
 
     return 301 https://$host$request_uri;
 }
 
-# Proxy para suarez.efdiaz.xyz
 server {
-    listen 443 ssl http2;
+    listen 8443 ssl http2;
     server_name suarez.efdiaz.xyz;
 
     ssl_certificate /etc/letsencrypt/live/suarez.efdiaz.xyz/fullchain.pem;
@@ -19,7 +18,7 @@ server {
     ssl_prefer_server_ciphers on;
 
     location / {
-        proxy_pass http://suarez_frontend:80;  # nombre del contenedor o ip interna
+        proxy_pass http://frontend:3000;  # nombre del contenedor o ip interna
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -27,7 +26,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://suarez_backend:5000;  # backend
+        proxy_pass http://backend:5000;  # backend
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -35,19 +34,3 @@ server {
     }
 }
 
-# Proxy para otro.efdiaz.xyz (ejemplo)
-server {
-    listen 443 ssl http2;
-    server_name otro.efdiaz.xyz;
-
-    ssl_certificate /etc/letsencrypt/live/otro.efdiaz.xyz/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/otro.efdiaz.xyz/privkey.pem;
-
-    location / {
-        proxy_pass http://otro_proyecto:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
