--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -18,7 +18,7 @@ server {
     ssl_prefer_server_ciphers on;
 
     location / {
-        proxy_pass http://frontend:3000;  # nombre del contenedor o ip interna
+        proxy_pass http://frontend:80;  # Cambiado a puerto interno 80
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -26,11 +26,10 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend:5000;  # backend
+        proxy_pass http://backend:5000;  # backend puerto interno correcto
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
-
