--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build: ./backend
     ports:
       - "5000:5000"
-    environment:
-      - NODE_ENV=production
+    env_file:
+      - ./backend/.env
     networks:
       - webnet
 
@@ -36,4 +36,3 @@ services:
 
 networks:
   webnet:
-
