--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,4 +1,3 @@
-# Redireccionar todo HTTP a HTTPS
 server {
     listen 8080;
     server_name suarez.efdiaz.xyz otro.efdiaz.xyz;
@@ -13,12 +12,11 @@ server {
     ssl_certificate /etc/letsencrypt/live/suarez.efdiaz.xyz/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suarez.efdiaz.xyz/privkey.pem;
 
-    # Opciones SSL recomendadas
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
 
     location / {
-        proxy_pass http://frontend:80;  # Cambiado a puerto interno 80
+        proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -26,7 +24,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://backend:5000;  # backend puerto interno correcto
+        proxy_pass http://backend:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
