Cambios de instancias

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,12 @@
+# Redirigir HTTP (puerto 8080) a HTTPS
 server {
-    listen 8080;
+    listen 2334;
     server_name suarez.efdiaz.xyz otro.efdiaz.xyz;
 
     return 301 https://$host$request_uri;
 }
 
+# Servidor HTTPS (puerto 8443)
 server {
     listen 8443 ssl http2;
     server_name suarez.efdiaz.xyz;
@@ -15,14 +17,16 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
 
+    # Redirige todo lo demás al frontend
     location / {
-        proxy_pass http://suarezramita_frontend_1:3000;
+        proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Redirige /api/ al backend
     location /api/ {
         proxy_pass http://backend:5000;
         proxy_set_header Host $host;
