--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,10 @@ services:
 
   frontend:
     build: .
-
+    ports:
+      - "3000:3000"
+    env_file:
+      - .env
     networks:
       - webnet
 
@@ -20,15 +23,14 @@ services:
     image: nginx:alpine
     container_name: nginx-suarez
     ports:
-      - "2334:2334"
-      - "8443:8443"
+      - "2334:2334"  # HTTP personalizado
+      - "8443:8443"  # HTTPS estándar
     depends_on:
       - frontend
       - backend
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
-      - ./dist:/usr/share/nginx/html:ro
     networks:
       - webnet
 
