--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,10 @@
-# Redirigir HTTP (puerto 8080) a HTTPS
 server {
     listen 2334;
-    server_name suarez.efdiaz.xyz otro.efdiaz.xyz;
+    server_name suarez.efdiaz.xyz;
 
     return 301 https://$host$request_uri;
 }
 
-# Servidor HTTPS (puerto 8443)
 server {
     listen 8443 ssl http2;
     server_name suarez.efdiaz.xyz;
@@ -17,7 +15,6 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
 
-    # Redirige todo lo demás al frontend
     location / {
         proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
@@ -26,7 +23,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Redirige /api/ al backend
     location /api/ {
         proxy_pass http://backend:5000;
         proxy_set_header Host $host;
