--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,7 @@ services:
 
   frontend:
     build: .
-    ports:
-      - "2239:3000"
+
     env_file:
       - .env
     networks:
@@ -23,14 +22,15 @@ services:
     image: nginx:alpine
     container_name: nginx-suarez
     ports:
-      - "2334:2334"  # HTTP personalizado
-      - "8443:8443"  # HTTPS estándar
+      - "2330:2330"      # HTTP estándar (puedes cambiar si quieres)
+      - "443:8443"   # HTTPS (mapear 443 externo a 8443 interno)
     depends_on:
-      - frontend
       - backend
+      - frontend
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
+      - ./dist:/usr/share/nginx/html:ro   
     networks:
       - webnet
 
