--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,13 @@
 server {
-    listen 2334;
+    listen 2330;
     server_name suarez.efdiaz.xyz;
 
+    # Redirige todo HTTP a HTTPS
     return 301 https://$host$request_uri;
 }
 
 server {
-    listen 8443 ssl http2;
+    listen 443 ssl http2;
     server_name suarez.efdiaz.xyz;
 
     ssl_certificate /etc/letsencrypt/live/suarez.efdiaz.xyz/fullchain.pem;
@@ -15,17 +16,19 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
 
+    # Sirve frontend estático
     location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
 
+    # Proxy para backend API
     location /api/ {
         proxy_pass http://backend:5000;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
+        proxy_set_header Connection "";
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
