Cambios de instancias

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,14 +2,12 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Copiar archivos para instalar dependencias
 COPY package*.json ./
+RUN npm install
 
-RUN npm ci --production
-
-# Copiar resto del código
 COPY . .
 
 EXPOSE 5000
 
-CMD ["node", "server.js"]
+CMD ["node", "index.js"]  # Ajusta según tu archivo de arranque
+
