--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,8 +1,7 @@
 server {
-    listen 2330;
+    listen 80;
     server_name suarez.efdiaz.xyz;
 
-    # Redirige todo HTTP a HTTPS
     return 301 https://$host$request_uri;
 }
 
@@ -16,19 +15,16 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
 
-    # Sirve frontend estático
+    root /usr/share/nginx/html;
+    index index.html;
+
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy para backend API
     location /api/ {
         proxy_pass http://backend:5000;
-        proxy_http_version 1.1;
         proxy_set_header Host $host;
-        proxy_set_header Connection "";
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
