--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,19 +15,19 @@ services:
     networks:
       - webnet
 
-  nginx:
-    image: nginx:alpine
-    container_name: nginx-suarez
-    ports:
-      - "2330:80"
-      - "443:443"
-    depends_on:
+nginx:
+  image: nginx:alpine
+  container_name: nginx-suarez
+  ports:
+    - "2330:80"     # Cambiar puerto externo 80 por 2330
+    - "8443:443"    # HTTPS puede mantenerse, si no está en uso
+  depends_on:
       - backend
       - frontend
-    volumes:
+  volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
-    networks:
+  networks:
       - webnet
 
 networks:
